Bug 412774 - Shortcuts settings crash after deleting a (big) batch of shortcuts and applying changes
Summary: Shortcuts settings crash after deleting a (big) batch of shortcuts and applyi...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.14.5
Platform: Debian stable Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 417415 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-10-09 16:50 UTC by Diogo Gomes
Modified: 2020-06-12 23:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diogo Gomes 2019-10-09 16:50:34 UTC
Application: systemsettings5 (5.14.5)

Qt Version: 5.11.3
Frameworks Version: 5.54.0
Operating System: Linux 5.2.0-0.bpo.2-amd64 x86_64
Distribution: Debian GNU/Linux 10 (buster)

-- Information about the crash:
- What I was doing when the application crashed:

I was applying changes after deleting a (big) batch of shortcuts.

- Unusual behavior I noticed:

The web shortcuts window crashed and after opening again, all left web shortcuts are empty.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Configuração do Sistema (systemsettings5), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f566e510cc0 (LWP 5407))]

Thread 16 (Thread 0x7f5631a4c700 (LWP 5425)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 15 (Thread 0x7f56322f0700 (LWP 5424)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 14 (Thread 0x7f5632d72700 (LWP 5423)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 13 (Thread 0x7f56335b3700 (LWP 5422)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 12 (Thread 0x7f564d9b7700 (LWP 5421)):
#0  0x00007f5672e77494 in read () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f5670ad6aa0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5670a90c0f in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5670a910e0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f5670a9125c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f567338d87b in QEventDispatcherGlib::processEvents (this=0x7f562c000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007f567333b27b in QEventLoop::exec (this=this@entry=0x7f564d9b6d40, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#7  0x00007f567318aec6 in QThread::exec (this=this@entry=0x5561a40caa70) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#8  0x00007f56725a2c65 in QQmlThreadPrivate::run (this=0x5561a40caa70) at qml/ftw/qqmlthread.cpp:148
#9  0x00007f5673194aa7 in QThreadPrivate::start (arg=0x5561a40caa70) at thread/qthread_unix.cpp:367
#10 0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#11 0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 11 (Thread 0x7f564efd5700 (LWP 5419)):
#0  QElapsedTimer::isMonotonic () at kernel/qelapsedtimer_unix.cpp:155
#1  0x00007f567338bf6e in QTimerInfoList::repairTimersIfNeeded (this=0x7f56380048f0) at kernel/qtimerinfo_unix.cpp:162
#2  0x00007f567338bfe3 in QTimerInfoList::timerWait (this=0x7f56380048f0, tm=...) at kernel/qtimerinfo_unix.cpp:389
#3  0x00007f567338d5fe in timerSourcePrepareHelper (timeout=0x7f564efd4b64, src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:161
#4  timerSourcePrepare (source=<optimized out>, timeout=0x7f564efd4b64) at kernel/qeventdispatcher_glib.cpp:165
#5  0x00007f5670a90669 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f5670a9106b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f5670a9125c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f567338d87b in QEventDispatcherGlib::processEvents (this=0x7f5638000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#9  0x00007f567333b27b in QEventLoop::exec (this=this@entry=0x7f564efd4d40, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#10 0x00007f567318aec6 in QThread::exec (this=this@entry=0x5561a38a47e0) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#11 0x00007f56725a2c65 in QQmlThreadPrivate::run (this=0x5561a38a47e0) at qml/ftw/qqmlthread.cpp:148
#12 0x00007f5673194aa7 in QThreadPrivate::start (arg=0x5561a38a47e0) at thread/qthread_unix.cpp:367
#13 0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#14 0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 10 (Thread 0x7f56557fa700 (LWP 5417)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 9 (Thread 0x7f5655ffb700 (LWP 5416)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 8 (Thread 0x7f56567fc700 (LWP 5415)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 7 (Thread 0x7f5656ffd700 (LWP 5414)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 6 (Thread 0x7f56577fe700 (LWP 5413)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 5 (Thread 0x7f5657fff700 (LWP 5412)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 4 (Thread 0x7f5664b4b700 (LWP 5411)):
#0  0x00007f567173500c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f5665366353 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007f56653660a7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 3 (Thread 0x7f56674ce700 (LWP 5410)):
#0  0x00007f5672e7b819 in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f5670a91136 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5670a9125c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f567338d87b in QEventDispatcherGlib::processEvents (this=0x7f5660000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f567333b27b in QEventLoop::exec (this=this@entry=0x7f56674cdd30, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#5  0x00007f567318aec6 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#6  0x00007f56735e3545 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f5673194aa7 in QThreadPrivate::start (arg=0x7f5673663d60) at thread/qthread_unix.cpp:367
#8  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#9  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 2 (Thread 0x7f566d533700 (LWP 5409)):
#0  0x00007f5672e7b819 in poll () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f56716efcf7 in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f56716f191a in xcb_wait_for_event () from /lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f566e0bad79 in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f5673194aa7 in QThreadPrivate::start (arg=0x5561a356ec00) at thread/qthread_unix.cpp:367
#5  0x00007f567172efa3 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007f5672e864cf in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 1 (Thread 0x7f566e510cc0 (LWP 5407)):
[KCrash Handler]
#6  0x00007f5630ec1223 in qDeleteAll<QList<SearchProvider*>::const_iterator> (end=..., begin=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:287
#7  qDeleteAll<QList<SearchProvider*> > (c=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qalgorithms.h:328
#8  SearchProviderRegistry::~SearchProviderRegistry (this=0x5561a4c4a8e8, __in_chrg=<optimized out>) at ./src/urifilters/ikws/searchproviderregistry.cpp:36
#9  0x00007f5630ec4582 in FilterOptions::~FilterOptions (this=0x5561a4c4a8a0, __in_chrg=<optimized out>) at ./obj-x86_64-linux-gnu/src/urifilters/ikws/kurisearchfilter_autogen/EWIEGA46WW/../../../../../../src/urifilters/ikws/ikwsopts.h:35
#10 FilterOptions::~FilterOptions (this=0x5561a4c4a8a0, __in_chrg=<optimized out>) at ./obj-x86_64-linux-gnu/src/urifilters/ikws/kurisearchfilter_autogen/EWIEGA46WW/../../../../../../src/urifilters/ikws/ikwsopts.h:35
#11 0x00007f56323fb76e in qDeleteAll<QList<KCModule*>::const_iterator> (end=..., begin=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:287
#12 qDeleteAll<QList<KCModule*> > (c=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qalgorithms.h:328
#13 KURIFilterModule::~KURIFilterModule (this=0x5561a469c1e0, __in_chrg=<optimized out>) at ./src/kcms/webshortcuts/main.cpp:125
#14 0x00007f56323fb7b9 in KURIFilterModule::~KURIFilterModule (this=0x5561a469c1e0, __in_chrg=<optimized out>) at ./src/kcms/webshortcuts/main.cpp:123
#15 0x00007f5674880fb4 in KCModuleProxy::deleteClient (this=this@entry=0x5561a4d27fc0) at ./src/kcmoduleproxy.cpp:179
#16 0x00007f567488105f in KCModuleProxy::~KCModuleProxy (this=0x5561a4d27fc0, __in_chrg=<optimized out>) at ./src/kcmoduleproxy.cpp:170
#17 0x00007f5674881209 in KCModuleProxy::~KCModuleProxy (this=0x5561a4d27fc0, __in_chrg=<optimized out>) at ./src/kcmoduleproxy.cpp:168
#18 0x00007f567336386b in QObjectPrivate::deleteChildren (this=this@entry=0x5561a4f001b0) at kernel/qobject.cpp:1997
#19 0x00007f5673d8aeb6 in QWidget::~QWidget (this=0x5561a4f51160, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1705
#20 0x00007f5673d8b0b9 in QWidget::~QWidget (this=0x5561a4f51160, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1564
#21 0x00007f567336386b in QObjectPrivate::deleteChildren (this=this@entry=0x5561a4a38960) at kernel/qobject.cpp:1997
#22 0x00007f5673d8aeb6 in QWidget::~QWidget (this=0x5561a4b7abc0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1705
#23 0x00007f5673ed9519 in QScrollArea::~QScrollArea (this=0x5561a4b7abc0, __in_chrg=<optimized out>) at widgets/qscrollarea.cpp:170
#24 0x00007f56745acefb in KPageWidgetItem::Private::~Private (this=0x5561a4e978b0, __in_chrg=<optimized out>) at /usr/include/c++/8/bits/atomic_base.h:390
#25 KPageWidgetItem::~KPageWidgetItem (this=0x5561a42888b0, __in_chrg=<optimized out>) at ./src/kpagewidgetmodel.cpp:89
#26 0x00007f56745acfd9 in KPageWidgetItem::~KPageWidgetItem (this=0x5561a42888b0, __in_chrg=<optimized out>) at ./src/kpagewidgetmodel.cpp:87
#27 0x00007f56745ada1b in PageItem::~PageItem (this=0x5561a4c243c0, __in_chrg=<optimized out>) at ./src/kpagewidgetmodel.cpp:191
#28 0x00007f56745ae606 in KPageWidgetModel::removePage (this=0x5561a3980e60, item=<optimized out>) at ./src/kpagewidgetmodel.cpp:554
#29 0x00007f56745aca47 in KPageWidget::removePage (this=<optimized out>, item=<optimized out>) at ./src/kpagewidget_p.h:35
#30 0x00007f56748c3945 in ModuleView::closeModules (this=0x5561a38b2020) at ./core/ModuleView.cpp:278
#31 0x00007f5664083b90 in SidebarMode::setActiveSubCategory (this=this@entry=0x5561a38fac70, cat=2) at ./sidebar/SidebarMode.cpp:452
#32 0x00007f566408aa67 in SidebarMode::qt_static_metacall (_o=_o@entry=0x5561a38fac70, _c=_c@entry=QMetaObject::WriteProperty, _id=_id@entry=4, _a=_a@entry=0x7ffd5b8250e0) at ./obj-x86_64-linux-gnu/sidebar/systemsettings_sidebar_mode_autogen/EWIEGA46WW/moc_SidebarMode.cpp:299
#33 0x00007f566408af63 in SidebarMode::qt_metacall (this=0x5561a38fac70, _c=QMetaObject::WriteProperty, _id=4, _a=0x7ffd5b8250e0) at ./obj-x86_64-linux-gnu/sidebar/systemsettings_sidebar_mode_autogen/EWIEGA46WW/moc_SidebarMode.cpp:343
#34 0x00007f56724c01e5 in QV4::QObjectWrapper::setProperty (engine=0x5561a38101e0, object=<optimized out>, property=0x5561a3e31328, value=...) at ../../include/QtQml/5.11.3/QtQml/private/../../../../../src/qml/qml/qqmlpropertycache_p.h:214
#35 0x00007f56724c0fae in QV4::QObjectWrapper::setQmlProperty (value=..., revisionMode=QV4::QObjectWrapper::IgnoreRevision, name=<optimized out>, object=0x5561a38fac70, qmlContext=<optimized out>, engine=0x5561a38101e0) at jsruntime/qv4qobjectwrapper.cpp:429
#36 QV4::QObjectWrapper::setQmlProperty (engine=0x5561a38101e0, qmlContext=<optimized out>, object=0x5561a38fac70, name=<optimized out>, revisionMode=QV4::QObjectWrapper::IgnoreRevision, value=...) at jsruntime/qv4qobjectwrapper.cpp:412
#37 0x00007f56724c10a4 in QV4::QObjectWrapper::put (m=0x7f564e3963c0, name=0x7f564e3963b8, value=...) at /usr/include/c++/8/bits/atomic_base.h:390
#38 0x00007f56724d411c in QV4::Object::put (v=..., name=<optimized out>, this=<optimized out>) at ../../include/QtQml/5.11.3/QtQml/private/../../../../../src/qml/memory/qv4heap_p.h:101
#39 QV4::Runtime::method_storeProperty (engine=engine@entry=0x5561a38101e0, object=..., nameIndex=<optimized out>, value=...) at jsruntime/qv4runtime.cpp:549
#40 0x00007f56724df959 in storePropertyHelper (f=0x5561a3ee3260, base=..., name=<optimized out>, value=...) at jit/qv4jit.cpp:368
#41 0x00007f5632404f4b in ?? ()
#42 0x00007f564e396340 in ?? ()
#43 0x00007f564e396350 in ?? ()
#44 0x00005561a38101e0 in ?? ()
#45 0x0000000000000000 in ?? ()
[Inferior 1 (process 5407) detached]

Possible duplicates by query: bug 402294.

Reported using DrKonqi
Comment 1 Kai Uwe Broulik 2020-02-11 09:49:53 UTC
*** Bug 402294 has been marked as a duplicate of this bug. ***
Comment 2 Kai Uwe Broulik 2020-02-11 09:50:32 UTC
*** Bug 417415 has been marked as a duplicate of this bug. ***
Comment 3 David Faure 2020-06-12 23:04:44 UTC
Git commit 55b8f1b8b4a9e2d90850744f80d603c87faaccf8 by David Faure, on behalf of Alexander Lohnau.
Committed on 12/06/2020 at 23:04.
Pushed by dfaure into branch 'master'.

Fix crash when deleting entry

The SearchProviderRegistry is a class variable and in its deconstructor
all the providers are deleted.
If you delete a provider in the GUI it is still in the list of
search providers which will be deleted.
Related: bug 402294

M  +0    -1    src/urifilters/ikws/ikwsopts.cpp

https://invent.kde.org/frameworks/kio/commit/55b8f1b8b4a9e2d90850744f80d603c87faaccf8
Comment 4 David Faure 2020-06-12 23:08:23 UTC
Git commit 4b495de034dee78172dea66c1362d6ac03893a1a by David Faure, on behalf of Alexander Lohnau.
Committed on 12/06/2020 at 23:08.
Pushed by dfaure into branch 'master'.

Do not display deleted/hidden webshortcuts

This might not be the cause of a crash but still unwanted/unexpected behavior.

M  +8    -1    src/urifilters/ikws/ikwsopts.cpp
M  +1    -0    src/urifilters/ikws/searchprovider.cpp
M  +6    -1    src/urifilters/ikws/searchprovider.h

https://invent.kde.org/frameworks/kio/commit/4b495de034dee78172dea66c1362d6ac03893a1a