Do not display deleted/hidden webshortcuts

This might not be the cause of a crash but still unwanted/unexpected behavior.

BUG: 412774